--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -6,4 +6,4 @@ steps:
   - id: Test
     name: 'gcr.io/cloud-builders/go'
     args: ['test','./...']
-    env: ['PROJECT_ROOT=github.com/gemsorg/dispute']
+    env: ['PROJECT_ROOT=github.com/expandorg/dispute']
